--- a/style.css
+++ b/style.css
@@ -16,3 +16,11 @@ body {
     display: flex;
     flex-direction: column;
 }
+
+#logo-container {
+    width: 100%;
+    height: 100%;
+    background-image: url('./imgs/ryan-kwok-xfYMLWgI8ww-unsplash.jpg');
+    background-repeat: no-repeat; 
+    background-size: contain;
+}
