--- a/style.css
+++ b/style.css
@@ -4,6 +4,11 @@
     margin: 0;
 }
 
+@font-face {
+    font-family: norse;
+    src: url('./imgs/Norse-Bold.otf');
+}
+
 body {
     width: 100%;
     height: 100%;
@@ -19,8 +24,31 @@ body {
 
 #logo-container {
     width: 100%;
-    height: 100%;
+    height: 400px;
     background-image: url('./imgs/ricardo-gomez-angel-RjBXz3rtdLw-unsplash.jpg');
     background-repeat: no-repeat; 
-    background-size: contain;
+    background-size: cover;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.logo-div {
+    height: 35%;
+    width: 100%;
+    background-color: rgba(50, 50, 50, 80%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.logo {
+    width: 100px;
+ 
+}
+
+.logo-text {
+    font-size: 80px;
+    font-family: norse;
+    color: white;
 }
