--- a/style.css
+++ b/style.css
@@ -52,3 +52,68 @@ body {
     font-family: norse;
     color: white;
 }
+
+#form-container {
+    padding-top: 30px;
+    padding-bottom: 30px;
+    background-color: #f0f0f0;
+}
+
+
+.description {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 23px;
+    font-weight: bold;
+    margin: 30px;
+    padding: 5px;
+}
+
+.description :last-child {
+    margin-top: 20px;
+}
+
+.form-div {
+    padding: 20px;
+    margin-top: 20px;
+    background-color: white;
+    width: 100%;
+    border-radius: 10px;
+    border: 1px solid #cccccc;
+    box-shadow: 0 4px 2px rgba(100, 100, 100, 80%);
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+}
+
+.form-row {
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+}
+
+.legend {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 1.5em;
+}
+
+input {
+    width: 90%;
+    border-radius: 2px;
+    border: 1px solid #bbbbbb;
+    padding: 5px;
+}
+
+button {
+    margin-right: 20px;
+    margin-top: 20px;
+    padding: 10px 40px;
+    background: rgb(247, 97, 10);
+    border-radius: 5px;
+    border: none;
+
+}
