--- a/style.css
+++ b/style.css
@@ -94,6 +94,9 @@ form {
     display: flex;
     flex-direction: column;
     padding: 10px;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
 }
 
 .legend {
@@ -101,19 +104,26 @@ form {
     font-size: 1.5em;
 }
 
+
 input {
-    width: 90%;
+    width: 80%;
     border-radius: 2px;
     border: 1px solid #bbbbbb;
-    padding: 5px;
+    padding: 10px;
 }
 
 button {
-    margin-right: 20px;
+    margin-right: 15px;
     margin-top: 20px;
     padding: 10px 40px;
     background: rgb(247, 97, 10);
     border-radius: 5px;
+    font-size: 20px;
     border: none;
 
+}
+
+label {
+    color: #555;
+    
 }
