--- a/style.css
+++ b/style.css
@@ -15,9 +15,6 @@ body {
 }
 
 .container {
-    width: 100%;
-    height: 100%;
-    border: 1px solid black;
     display: flex;
     flex-direction: column;
 }
@@ -28,9 +25,6 @@ body {
     background-image: url('./imgs/ricardo-gomez-angel-RjBXz3rtdLw-unsplash.jpg');
     background-repeat: no-repeat; 
     background-size: cover;
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
 
 .logo-div {
@@ -97,6 +91,7 @@ form {
     width: 100%;
     justify-content: center;
     align-items: center;
+    margin: 10px;
 }
 
 .legend {
@@ -110,6 +105,7 @@ input {
     border-radius: 2px;
     border: 1px solid #bbbbbb;
     padding: 10px;
+    margin-top: 10px;
 }
 
 button {
@@ -126,4 +122,86 @@ button {
 label {
     color: #555;
     
+}
+
+input:invalid {
+    border: 1px solid rgb(201, 2, 2);
+}
+
+input:valid {
+    border: 1px solid green
+}
+
+a {
+    text-decoration: none;
+    color: rgb(247, 97, 10);
+}
+
+@media (min-width:801px) {
+
+    .container{
+        flex-direction: row;
+        align-items: stretch;
+    }
+
+    #logo-container {
+        background-image: url('./imgs/ryan-kwok-xfYMLWgI8ww-unsplash.jpg');
+        width: 45%;
+        border: 5px solid black;
+        height: 1000px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+    }
+
+    .logo-div {
+        height: 15%;
+        margin-top: 200px;
+    }
+
+    .description {
+        padding: 30px;
+        margin-bottom: 50px;
+    }
+
+    form {
+        flex-direction: row;
+        flex-wrap: wrap;
+
+    }
+
+    .form-row {
+        width: 40%;
+        align-items: flex-start;
+    }
+
+    button {
+        background-color: rgb(10, 156, 224);
+        color: #f5f5f5;
+        margin: 2px 0 0 16px;
+    }
+
+    .login-div {
+        margin: 30px;
+        padding: 20px;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        font-weight: bold;
+        font-size: 20px;
+    }
+
+    a {
+        color: rgb(10, 156, 224);
+    }
+
+    .lic {
+        color: white;
+        text-align: center;
+        font-weight: 25;
+    }
+
+    .artist {
+        color: white;
+        text-decoration: underline;
+
+    }
 }
