--- a/style.css
+++ b/style.css
@@ -148,9 +148,29 @@ input:valid {
     border: 1px solid green
 }
 
+input:focus {
+    border: 1px solid rgb(6, 86, 235);
+    box-shadow: 1px 1px #eee;
+}
+
 a {
     text-decoration: none;
     color: rgb(247, 97, 10);
+}
+
+.green {
+    color: green;
+}
+
+.red {
+    color: rgb(201, 2, 2);
+}
+
+.password-checks {
+    position: absolute;
+    left: 65%;
+    display: none;
+    transition: 1s;
 }
 
 @media (min-width:801px) {
@@ -221,12 +241,7 @@ a {
 
     }
 
-    .password-checks {
-        position: absolute;
-        left: 65%;
-        display: block;
-        transition: 0.2s;
-    }
+   
     
     .check {
         margin: 10px;
